# templates

./: flake.nix
c/: Makefile  flake.nix
c/include/lcq/: foo.h
c/src/: main.c
game-teleia/: .dir-locals.el  .gitignore  Cargo.toml  flake.nix  index.html
game-teleia/src/: game.rs  index.css  lib.rs  main.rs
shell/: flake.nix
web-haskell-purescript/: flake.nix
web-haskell-purescript/backend/: backend.cabal
web-haskell-purescript/frontend/: index.html
web-haskell-purescript/frontend/src/: Main.purs
